syntax = "proto3";

package pb;


import "movie_history.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/lancer2672/DandelionServer_Go/pb";

message CreateMovieHistoryRequest {
    //small number'd be better
    int32  movie_id      = 1;
    int32  user_id  = 2;
    int32 watched_duration = 3 ;
    google.protobuf.Timestamp last_watched = 4;
}
message CreateMovieHistoryResponse {
    MovieHistory movie_history = 1;
}
