syntax = "proto3";

package pb;

import "rpc_create_movie_history.proto";
import "rpc_get_movie_history.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/lancer2672/DandelionServer_Go/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Dandelion GRPC Server";
    version: "1.0";
    contact: {
      name: "Dandelion_Go project";
      url: "https://github.com/lancer2672/DandelionServer_Go";
      email: "";
    };
  };
};

service Dandelion {
    rpc CreateMovieHistory(CreateMovieHistoryRequest) returns (google.protobuf.Empty) {
            option (google.api.http) = {
                  post: "/movie/history"
                  body: "*"
                };
    }
    rpc GetMovieHistory(GetMovieHistoryRequest) returns (GetMovieHistoryResponse) {
      option (google.api.http) = {
          get: "/movie/history"
      };
    }
    
};
